objects/Income_Direct_Debit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Income_Direct_Debit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Income_Direct_Debit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DD_Account_City__c</fullName>
        <label>Account City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Account_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DD_Account_Holder_FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Account_Holder_LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Account_Holder_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Account_Number_OK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Number OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Account_PostCode__c</fullName>
        <label>PostCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Account_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Account_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Bank_Account_Name__c</fullName>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Bank_Address__c</fullName>
        <label>DD Bank Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Bank_City__c</fullName>
        <label>DD Bank City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Bank_Phone__c</fullName>
        <label>DD Bank Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Bank_Postcode__c</fullName>
        <label>DD Bank Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Bank_Sort_Code__c</fullName>
        <label>Bank Sort Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Collection_Day__c</fullName>
        <label>Collection Day</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DD_Collection_Period__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DD_Collection_Period__c</fullName>
        <label>Collection Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DD_Collection_Reference__c</fullName>
        <defaultValue>&quot;Donation&quot;</defaultValue>
        <label>Collection Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Collection_Stretch__c</fullName>
        <label>Collection Stretch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DD_Collection_Type__c</fullName>
        <inlineHelpText>Fixed Collection type will not be collected after the End Date</inlineHelpText>
        <label>Collection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                    <label>Fixed</label>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>One Off</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DD_Count_Of_Failed_Collections__c</fullName>
        <label>DD Count Of Failed Collections</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DD_End_Date__c</fullName>
        <inlineHelpText>DDs Will not be collected after this date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Final_Collection_Amount__c</fullName>
        <label>Final Collection Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DD_First_Collection_Amount__c</fullName>
        <label>First Collection Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DD_First_Collection_Date__c</fullName>
        <inlineHelpText>This is set by the DD collection engine</inlineHelpText>
        <label>First Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Hold_Reason__c</fullName>
        <label>DD Hold Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Last_Collected_Date__c</fullName>
        <inlineHelpText>This is populated by the DD Engine</inlineHelpText>
        <label>Last Collected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Last_Collection_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is Read only and set my the DD Engine</description>
        <inlineHelpText>This is Read only and set my the DD Engine</inlineHelpText>
        <label>Last Collection Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Next_Collection_Date__c</fullName>
        <inlineHelpText>This is set by the DD Collection Engine</inlineHelpText>
        <label>Next Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_OK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DD OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Ongoing_Collection_Amount__c</fullName>
        <label>Ongoing Collection Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DD_Plan__c</fullName>
        <label>DD Plan</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Single_Account_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DD Single Account Holder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Sort_Code_OK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sort Code OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Start_Date__c</fullName>
        <inlineHelpText>DDs will not be collected before this date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Instruction</fullName>
                    <default>true</default>
                    <label>New Instruction</label>
                </value>
                <value>
                    <fullName>First Collection</fullName>
                </value>
                <value>
                    <fullName>Ongoing Collection</fullName>
                </value>
                <value>
                    <fullName>Final Collection</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>First Represent</fullName>
                </value>
                <value>
                    <fullName>Second Represent</fullName>
                </value>
                <value>
                    <fullName>Third Represent</fullName>
                </value>
                <value>
                    <fullName>Cancelled by Payer</fullName>
                </value>
                <value>
                    <fullName>Cancelled by Originator</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DD_Total_Amount_Debited__c</fullName>
        <label>Total Amount Debited</label>
        <summarizedField>Income_Debit_History__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Income_Debit_History__c.DD_Stage__c</field>
            <operation>equals</operation>
            <value>Submitted, Successful</value>
        </summaryFilterItems>
        <summaryForeignKey>Income_Debit_History__c.Income_Direct_Debit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Processed_Date__c</fullName>
        <label>Last Processed Date</label>
        <summarizedField>Income_Debit_History__c.CreatedDate</summarizedField>
        <summaryForeignKey>Income_Debit_History__c.Income_Direct_Debit__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Direct Debit Details</relationshipLabel>
        <relationshipName>Income_Direct_Debit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Direct Debit Details</relationshipLabel>
        <relationshipName>Direct_Debit_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Direct Debit Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DD_Status__c</columns>
        <columns>DD_Collection_Day__c</columns>
        <columns>DD_First_Collection_Amount__c</columns>
        <columns>DD_Ongoing_Collection_Amount__c</columns>
        <columns>DD_Next_Collection_Date__c</columns>
        <columns>DD_First_Collection_Date__c</columns>
        <columns>DD_Bank_Account_Number__c</columns>
        <columns>DD_Bank_Sort_Code__c</columns>
        <columns>DD_Account_Number_OK__c</columns>
        <columns>DD_Sort_Code_OK__c</columns>
        <columns>DD_OK__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DD_Status__c</field>
            <operation>notEqual</operation>
            <value>Expired,Cancelled by Payer,Cancelled by Originator,Cancelled</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Cancelled_Instructions</fullName>
        <columns>NAME</columns>
        <columns>DD_Status__c</columns>
        <columns>DD_Collection_Day__c</columns>
        <columns>DD_First_Collection_Amount__c</columns>
        <columns>DD_Ongoing_Collection_Amount__c</columns>
        <columns>DD_Next_Collection_Date__c</columns>
        <columns>DD_First_Collection_Date__c</columns>
        <columns>DD_Bank_Account_Number__c</columns>
        <columns>DD_Bank_Sort_Code__c</columns>
        <columns>DD_Account_Number_OK__c</columns>
        <columns>DD_Sort_Code_OK__c</columns>
        <columns>DD_OK__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DD_Status__c</field>
            <operation>contains</operation>
            <value>Cancelled</value>
        </filters>
        <label>All Cancelled Instructions</label>
    </listViews>
    <listViews>
        <fullName>All_Collections</fullName>
        <columns>NAME</columns>
        <columns>DD_Status__c</columns>
        <columns>DD_Collection_Day__c</columns>
        <columns>DD_First_Collection_Amount__c</columns>
        <columns>DD_Ongoing_Collection_Amount__c</columns>
        <columns>DD_Next_Collection_Date__c</columns>
        <columns>DD_First_Collection_Date__c</columns>
        <columns>DD_Bank_Account_Number__c</columns>
        <columns>DD_Bank_Sort_Code__c</columns>
        <columns>DD_Account_Number_OK__c</columns>
        <columns>DD_Sort_Code_OK__c</columns>
        <columns>DD_OK__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DD_Status__c</field>
            <operation>equals</operation>
            <value>First Collection,Ongoing Collection,Final Collection,First Represent</value>
        </filters>
        <label>All Collections</label>
    </listViews>
    <listViews>
        <fullName>All_First</fullName>
        <columns>NAME</columns>
        <columns>DD_Status__c</columns>
        <columns>DD_Collection_Day__c</columns>
        <columns>DD_First_Collection_Amount__c</columns>
        <columns>DD_Ongoing_Collection_Amount__c</columns>
        <columns>DD_Next_Collection_Date__c</columns>
        <columns>DD_First_Collection_Date__c</columns>
        <columns>DD_Bank_Account_Number__c</columns>
        <columns>DD_Bank_Sort_Code__c</columns>
        <columns>DD_Account_Number_OK__c</columns>
        <columns>DD_Sort_Code_OK__c</columns>
        <columns>DD_OK__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DD_Status__c</field>
            <operation>equals</operation>
            <value>First Collection</value>
        </filters>
        <label>All First</label>
    </listViews>
    <listViews>
        <fullName>All_New_Instructions</fullName>
        <columns>NAME</columns>
        <columns>DD_Status__c</columns>
        <columns>DD_Collection_Day__c</columns>
        <columns>DD_First_Collection_Amount__c</columns>
        <columns>DD_Ongoing_Collection_Amount__c</columns>
        <columns>DD_Next_Collection_Date__c</columns>
        <columns>DD_First_Collection_Date__c</columns>
        <columns>DD_Bank_Account_Number__c</columns>
        <columns>DD_Bank_Sort_Code__c</columns>
        <columns>DD_Account_Number_OK__c</columns>
        <columns>DD_Sort_Code_OK__c</columns>
        <columns>DD_OK__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DD_Status__c</field>
            <operation>equals</operation>
            <value>New Instruction</value>
        </filters>
        <label>All New Instructions</label>
    </listViews>
    <nameField>
        <displayFormat>DD{00000000}</displayFormat>
        <label>AUDDIS Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct Debit Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Number_Length_8_digits</fullName>
        <active>true</active>
        <description>Check that the Account Number entered is 8 digits in length</description>
        <errorConditionFormula>(NOT(ISNUMBER(DD_Bank_Account_Number__c )))   ||  NOT( REGEX( DD_Bank_Account_Number__c , &quot;\\d{8}&quot;))</errorConditionFormula>
        <errorMessage>Account Number must contain 8 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_be_New_Instruction</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISNEW(), NOT(  ISPICKVAL( DD_Status__c , &apos;New Instruction&apos;))  )</errorConditionFormula>
        <errorDisplayField>DD_Status__c</errorDisplayField>
        <errorMessage>All New DD must start as New Instruction</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sort_Code_Length_6_digits</fullName>
        <active>true</active>
        <description>Check that the Sort Code entered is 6 digits in length</description>
        <errorConditionFormula>(NOT(ISNUMBER(DD_Bank_Account_Number__c )))   ||  NOT( REGEX(  DD_Bank_Sort_Code__c  , &quot;\\d{6}&quot;))</errorConditionFormula>
        <errorMessage>Sort Code must contain 6 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>must_be_set</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT( DD_Collection_Day__c ))</errorConditionFormula>
        <errorDisplayField>DD_Collection_Day__c</errorDisplayField>
        <errorMessage>Must select a Collection date</errorMessage>
    </validationRules>
</CustomObject>